--- a/iffanance/contatos.html
+++ b/iffanance/contatos.html
@@ -75,7 +75,7 @@
                 <label for="ecomentário"> Digite seu comentário</label>
                 <textarea id="comentário" name="comentário"></textarea>
                 <br>
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar" style="width: 50%;">
             </form>
             </div>
         </main>
