--- a/iffanance/index.html
+++ b/iffanance/index.html
@@ -54,13 +54,24 @@
         </header>
         <main>
             <div class="wrapper">
-            <h1> Home</h1>
+                <div class="flex-bt align-center">
+                  <h1> Home</h1>
+                 <button style="height: 40px;" onclick="openModal()"> + Adicionar</button>
+                </div>
             </div>
+         
         </main>
+        <div class="modal" onclick="closeModal">
+            <main>
+                <header class=" flex-bt align-center">
+                    <h1> Adicionar Ação</h1>
+                    <button onclick="closeModal()">X</button>
+                </header>
+                <form>
+                    
+                </form>
+            </main>
+        </div>
     </body>
-    <script>
-        const logo = document.getElementById('logo')
-        console.log("elemento logo:")
-        console.log(logo)
-    </script>
+    <script src="./js/main.js"></script>
 </html>
